# NKO

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  dockerfile  manage.py  pyproject.toml
Docker file for devops /: dockerfile
NKO/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
NKO/Middleware/: logger.py
NKO/settings/: settings.py  settings_dev.py  settings_prod.py
api_for_front/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
api_for_front/migrations/: 0001_initial.py  0002_auto_20230606_1412.py  0002_auto_20230719_1631.py  0002_maintableko_stages.py  0003_alter_maintableko_stages.py  0003_auto_20230606_1430.py  0003_auto_20230719_1641.py  0004_auto_20230409_1459.py  0004_auto_20230606_1445.py  0004_auto_20230719_1642.py  0005_auto_20230720_1237.py  0006_alter_step_name.py  0007_auto_20230720_1445.py  0008_alter_step_structure_step.py  0009_auto_20230720_1506.py  0010_auto_20230722_1506.py  0011_mainproject_last_change.py  0012_auto_20230722_1535.py  0013_auto_20230722_1547.py  0014_auto_20230722_1552.py  0015_auto_20230726_1335.py  0016_auto_20230804_1103.py  0017_alter_steptemplates_name.py  0018_auto_20230804_1115.py  0019_rename_what_project_step_project_id.py  0020_step_metadata.py  0021_remove_steptemplates_schema_for_create.py  0022_alter_step_metadata.py  0023_alter_steptemplates_schema.py  0024_remove_mainproject_structure_project_and_more.py  0025_alter_steptemplates_example_metadata.py  0026_fields.py  0027_alter_fields_step.py  0029_alter_fields_filed_alter_fields_step.py  (+54 more)
my_user/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
(+10 files in other folders)
