[tool.poetry]
name = "nko"
version = "0.1.0"
description = ""
authors = ["zifrit <zifrit@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django = "4"
django-debug-toolbar = "^4.0.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
django-filter = "^23.2"
celery = "^5.3.1"
django-redis = "^5.3.0"
flower = "^2.0.0"
drf-spectacular = "^0.26.4"
redis = "^4.6.0"
coverage = "^7.3.0"
whitenoise = "^6.5.0"
django-cors-headers = "^4.2.0"
ipython = "^8.15.0"
django-extensions = "^3.2.3"
djangorestframework-simplejwt = "^5.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
